crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__context__tests__aug_assign_name.snap
---
source: crates/python_parser/src/parser/tests/context.rs
expression: parse_ast
---
(
    [
        AugAssign(
            AugAssignStmt {
                range: 0..6,
                target: Name(
                    NameExpr {
                        range: 0..1,
                        id: "x",
                        ctx: Store,
                    },
                ),
                op: Add,
                value: NumberLiteral(
                    NumberLiteralExpr {
                        range: 5..6,
                        value: Int(
                            1,
                        ),
                    },
                ),
            },
        ),
    ],
    [],
)
