crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__context__tests__del_name.snap
---
source: crates/python_parser/src/parser/tests/context.rs
expression: parse_ast
---
(
    [
        Delete(
            DeleteStmt {
                range: 0..5,
                targets: [
                    Name(
                        NameExpr {
                            range: 4..5,
                            id: "x",
                            ctx: Del,
                        },
                    ),
                ],
            },
        ),
    ],
    [],
)
